--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>975579300298-otppfcgmqhph48afoqb7ivr94cjdu4gf.apps.googleusercontent.com</string>
+	<string>689739244621-ut0kg2sl77nhsujln4k1iva8kes3ehrd.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.975579300298-otppfcgmqhph48afoqb7ivr94cjdu4gf</string>
+	<string>com.googleusercontent.apps.689739244621-ut0kg2sl77nhsujln4k1iva8kes3ehrd</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCbzNVc9_JCsyMJxquXohgPrBW7jKwpdyA</string>
+	<string>AIzaSyCReqvnVJgN_IflFD9CosRnyY16dmihRzA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>975579300298</string>
+	<string>689739244621</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.aplanetbit.dictionary.insurance</string>
+	<string>com.aplanetbit.pro.dictionary.of.insurance</string>
 	<key>PROJECT_ID</key>
-	<string>dictionary-of-insurance</string>
+	<string>pro-dictionary-of-insurance</string>
 	<key>STORAGE_BUCKET</key>
-	<string>dictionary-of-insurance.appspot.com</string>
+	<string>pro-dictionary-of-insurance.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:975579300298:ios:4807d36008eff99f348f33</string>
+	<string>1:689739244621:ios:6941eb522f9e7e8ae1e804</string>
 </dict>
 </plist>
