Initial commit First version 1.0.0 on Friday, 8.oct.2021 New Icon Corrected strings

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,7 +42,7 @@ pod 'Firebase/Analytics'
 # esto de OneSignal estaba sin comentar
 target 'OneSignalNotificationServiceExtension' do
   use_frameworks!
-  pod 'OneSignal', '>= 2.9.3', '< 3.0'
+  pod 'OneSignalXCFramework', '>= 3.4.3', '< 4.0'
 end
 
 post_install do |installer|
