--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.aplanetbit.dictionary.of.insurance</string>
+		<string>group.com.aplanetbit.pro.dictionary.of.insurance.onesignal</string>
 	</array>
 </dict>
 </plist>
