--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:7.0+'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.10'     // new
+        classpath 'com.google.firebase:perf-plugin:1.4.0'     // Performance Monitoring plugin
     }
 }
 
