--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -35,11 +35,12 @@ target 'Runner' do
 end
 
 # add the Firebase pod for Google Analytics
-pod 'Firebase/Analytics'
+#pod 'Firebase/Analytics'
 # add pods for any other desired Firebase products
+#pod 'Firebase/Performance'
 # https://firebase.google.com/docs/ios/setup#available-pods
 
-# esto de OneSignal estaba sin comentar
+# esto de OneSignal estaba sin comentar lo comento por el fallo de dependencias transitivas
 target 'OneSignalNotificationServiceExtension' do
   use_frameworks!
   pod 'OneSignalXCFramework', '>= 3.4.3', '< 4.0'
