--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -27,26 +27,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  provider: ^4.1.3
-  url_launcher: ^5.7.10
-  onesignal_flutter: ^2.0.0
-  firebase_core: ^0.5.3
-  firebase_analytics: ^6.3.0
-  package_info: ^0.4.3+2
-  sentry_flutter: ^4.0.1
-  rate_my_app: ^0.7.2
+  provider: ^6.0.1
+  url_launcher: ^6.0.12  #5.7.10
+  #onesignal_flutter: ^3.2.3  #2.0.0 worked
+  firebase_core: ^1.7.0 #^1.3.0 #0.5.3
+  #firebase_analytics:   ^7.0.1
+  package_info: ^2.0.2
+  sentry_flutter: ^6.0.1
+  rate_my_app: ^1.1.1
   flappy_search_bar: ^1.7.2
-  flutter_tts: ^2.1.0
-  speech_to_text: ^3.1.0
-  share: ^0.6.5+4
-  easy_localization: ^2.3.3
+  flutter_tts: ^3.2.2
+  speech_to_text: ^5.1.1
+  share: ^2.0.4
+  easy_localization: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: ^1.14.4
+  #test: ^1.18.2  #1.14.4 worked
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
